--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,38 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FF9999"
-    tools:context=".LoginActivity" >
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/progressLayout"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayoutTop"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:visibility="invisible"
+        android:background="#FFFFFF">
 
         <TextView
-            android:id="@+id/descriptEmail"
+            android:id="@+id/nameText4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="left"
+            android:textSize="0dp"
+            android:textColor="@color/black"
+            android:text="email" />
+
+        <TextView
+            android:id="@+id/nameText7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="left"
+            android:textSize="1dp"
+            android:background="@color/black"
+            android:text="" />
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayoutHead"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayoutTop"
+        android:layout_marginBottom="50dp"
+        android:layout_gravity="top"
+        android:visibility="visible"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/nameText1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:textSize="40dp"
+            android:gravity="center"
+            android:textColor="#40C4FF"
+            android:visibility="invisible"
+            android:text="● ● ● ● ●" />
+
+        <TextView
+            android:id="@+id/nameText2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:textSize="40dp"
+            android:gravity="center"
+            android:textColor="#40C4FF"
+            android:text="ⓑ ⓣ ⓣ" />
+
+        <TextView
+            android:id="@+id/nameText3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:textSize="40dp"
+            android:gravity="center"
+            android:textColor="#40C4FF"
+            android:text="● ● ●" />
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayoutBody"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/descriptText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:text="Email" />
+            android:textSize="20dp"
+            android:text="이메일" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:maxLength="25"
             android:inputType="textEmailAddress" />
 
         <TextView
-            android:id="@+id/descriptPW"
+            android:id="@+id/descriptText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:text="Password" />
+            android:textSize="20dp"
+            android:text="암호" />
 
         <EditText
             android:id="@+id/password"
@@ -41,20 +121,40 @@
             android:ems="10"
             android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/loginBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="@color/purple_500"
-            android:text="다음" />
-
         <TextView
             android:id="@+id/resultText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20dp"
+            android:textColor="#B00020"
             android:gravity="center"
-            android:text="Team 2 bono" />
+            android:text="" />
+
+        <Button
+            android:id="@+id/loginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:background="@drawable/button_effect"
+            android:text="로그인" />
 
     </LinearLayout>
-</FrameLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayoutBottom"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/teamLogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:text="Bono 2 Team" />
+
+    </LinearLayout>
+</RelativeLayout>
