--- a/app/src/main/res/layout/activity_join_form.xml
+++ b/app/src/main/res/layout/activity_join_form.xml
@@ -10,29 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:visibility="invisible"
-        android:background="#FFFFFF">
+        android:visibility="visible">
 
         <TextView
-            android:id="@+id/nameText4"
-            android:layout_width="match_parent"
+            android:id="@+id/backText"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_gravity="left"
-            android:textSize="0dp"
-            android:textColor="@color/black"
-            android:text="email" />
-
-        <TextView
-            android:id="@+id/nameText7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="left"
-            android:textSize="1dp"
-            android:background="@color/black"
-            android:text="" />
+            android:textSize="20dp"
+            android:text="←뒤로" />
 
     </LinearLayout>
 
@@ -90,14 +77,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/linearLayoutHead"
         android:layout_gravity="center">
 
         <TextView
             android:id="@+id/descriptText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="이메일" />
 
         <EditText
@@ -111,28 +98,28 @@
             android:id="@+id/descriptText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="암호" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:maxLength="15"
             android:inputType="textPassword" />
 
         <TextView
             android:id="@+id/descriptText3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="이름" />
 
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="25"
+            android:maxLength="15"
             android:inputType="textEmailAddress" />
 
         <TextView
@@ -149,7 +136,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect"
             android:text="가입" />
 
     </LinearLayout>
@@ -168,7 +155,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:textSize="15dp"
-            android:text="Bono 2 Team" />
+            android:text="@string/team_logo" />
 
     </LinearLayout>
 </RelativeLayout>
