--- a/app/src/main/res/layout/activity_login_form.xml
+++ b/app/src/main/res/layout/activity_login_form.xml
@@ -97,7 +97,7 @@
             android:id="@+id/descriptText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="이메일" />
 
         <EditText
@@ -122,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect"
             android:text="다음" />
 
     </LinearLayout>
@@ -141,7 +141,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:textSize="15dp"
-            android:text="Bono 2 Team" />
+            android:text="@string/team_logo" />
 
     </LinearLayout>
 </RelativeLayout>
