--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,49 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
         android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:visibility="visible"
-        android:background="#304FFE">
+        android:gravity="center_vertical"
+        android:visibility="visible">
 
         <TextView
-            android:id="@+id/nameText4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/nameText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="left"
-            android:gravity="center"
+            android:layout_gravity="left|center_vertical"
             android:textSize="20dp"
-            android:textColor="#FFFFFF"
             android:text="ⓑ  ⓣ  ⓣ" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/nameText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right|center_vertical"
+            android:gravity="center_vertical"
+            android:textSize="25dp"
+            android:text=" ━ " />
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayoutDiv"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayoutTop"
+        android:layout_marginBottom="25dp"
+        android:visibility="visible">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"/>
 
     </LinearLayout>
 
@@ -34,9 +60,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayoutTop"
+        android:layout_below="@id/linearLayoutDiv"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginBottom="25dp"
         android:layout_gravity="top"
         android:background="#E1F5FE"
         android:gravity="center">
@@ -95,14 +122,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/linearLayoutHead"
         android:layout_gravity="center">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="8dp"
             android:layout_marginBottom="25dp"
-            android:background="#000000"/>
+            android:background="@drawable/div_line"/>
 
         <Button
             android:id="@+id/oneBtn"
@@ -111,7 +138,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect"
             android:textColor="@color/white"
             android:text="getAuthToken" />
 
@@ -122,7 +149,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect"
             android:textColor="@color/white"
             android:text="getUserList" />
 
@@ -133,7 +160,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect"
             android:textColor="@color/white"
             android:text="createUser" />
 
@@ -153,7 +180,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:textSize="15dp"
-            android:text="Bono 2 Team" />
+            android:text="@string/team_logo" />
 
     </LinearLayout>
 </RelativeLayout>
