--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,32 +6,23 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/linearLayoutTop"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:visibility="invisible"
-        android:background="#FFFFFF">
+        android:visibility="invisible">
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="5dp">
+        </View>
 
         <TextView
-            android:id="@+id/nameText4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/nameText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_gravity="left"
-            android:textSize="0dp"
-            android:textColor="@color/black"
-            android:text="email" />
-
-        <TextView
-            android:id="@+id/nameText7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="left"
-            android:textSize="1dp"
-            android:background="@color/black"
+            android:textSize="20dp"
             android:text="" />
 
     </LinearLayout>
@@ -44,40 +35,30 @@
         android:layout_below="@id/linearLayoutTop"
         android:layout_marginBottom="50dp"
         android:layout_gravity="top"
-        android:visibility="visible"
         android:gravity="center">
-
-        <TextView
-            android:id="@+id/nameText1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:textSize="40dp"
-            android:gravity="center"
-            android:textColor="#40C4FF"
-            android:visibility="invisible"
-            android:text="● ● ● ● ●" />
 
         <TextView
             android:id="@+id/nameText2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:textSize="40dp"
-            android:gravity="center"
             android:textColor="#40C4FF"
-            android:text="ⓑ ⓣ ⓣ" />
+            android:visibility="invisible"
+            android:text="● ● ● ● ●" />
 
         <TextView
             android:id="@+id/nameText3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:textSize="40dp"
-            android:gravity="center"
+            android:textColor="#40C4FF"
+            android:text="ⓑ ⓣ ⓣ" />
+
+        <TextView
+            android:id="@+id/nameText4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="40dp"
             android:textColor="#40C4FF"
             android:text="● ● ●" />
 
@@ -91,43 +72,39 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_centerVertical="true"
-        android:layout_gravity="center">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/descriptText1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:textSize="45dp"
             android:textColor="#2979FF"
-            android:gravity="center"
             android:text="인증 메일 발송" />
 
         <TextView
             android:id="@+id/descriptText2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="#2979FF"
-            android:gravity="center"
             android:textSize="12dp"
             android:text="해당 이메일로 본인 인증 메일이 발송되었습니다" />
 
         <TextView
             android:id="@+id/descriptText3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="#2979FF"
-            android:gravity="center"
             android:textSize="12dp"
             android:text="인증 메일 확인까지 2~3분 정도 소요될 수 있습니다" />
 
         <TextView
             android:id="@+id/descriptText4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:textColor="#2979FF"
-            android:gravity="center"
             android:textSize="12dp"
             android:text="본인 인증 후 로그인해 주세요" />
 
@@ -146,14 +123,14 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/teamLogo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:gravity="center"
             android:textSize="15dp"
             android:text="@string/team_logo" />
 
