--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:gravity="center_vertical"
-        android:visibility="visible">
+        >
 
         <TextView
             android:id="@+id/nameText1"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayoutTop"
         android:layout_marginBottom="25dp"
-        android:visibility="visible">
+        >
 
         <View
             android:layout_width="match_parent"
@@ -71,7 +71,7 @@
         <TextView
             android:id="@+id/infoText1"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="left"
@@ -82,7 +82,7 @@
         <TextView
             android:id="@+id/infoText2"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="left"
@@ -93,7 +93,7 @@
         <TextView
             android:id="@+id/infoText3"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="left"
@@ -104,7 +104,7 @@
         <TextView
             android:id="@+id/infoText4"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="25dp"
@@ -123,7 +123,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_below="@id/linearLayoutHead"
-        android:layout_gravity="center">
+        android:gravity="center">
 
         <View
             android:layout_width="match_parent"
@@ -171,14 +171,14 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/teamLogo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:gravity="center"
             android:textSize="15dp"
             android:text="@string/team_logo" />
 
