--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="TestApp">
-        <!-- Customize your theme here. -->
+    <style name="TestApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Customize your theme here. "Theme.AppCompat.NoActionBar"-->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDisablePreview">true</item>
